@@ -10,6 +10,8 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #23640: int.from_bytes() no longer bypasses constructors for subclasses.
+
 - Issue #26811: gc.get_objects() no longer contains a broken tuple with NULL
   pointer.
 
